--- a/app/src/main/res/layout/fragment_equity_advisory.xml
+++ b/app/src/main/res/layout/fragment_equity_advisory.xml
@@ -171,73 +171,19 @@
                 tools:listitem="@layout/row_why_tarrakki_item" />
 
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/clPlanFirst"
+            <androidx.recyclerview.widget.RecyclerView
+                app:layout_goneMarginTop="@dimen/_10sdp"
+                android:overScrollMode="never"
+                android:id="@+id/rvEquityPlan"
+                enableNestedScrollView="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_30sdp"
-                android:background="@drawable/bg_purple_radius"
-                app:layout_constraintTop_toBottomOf="@+id/rvWhatYouWillGet">
+                android:layout_marginTop="@dimen/_10sdp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toBottomOf="@+id/rvWhatYouWillGet"
+                tools:itemCount="2"
+                tools:listitem="@layout/row_equity_plan" />
 
-                <TextView
-                    android:id="@+id/tvPlanMonthFirst"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_18sdp"
-                    android:layout_marginTop="@dimen/_15sdp"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="@string/six_month"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_15ssp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvTotalPriceFirst"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/lato_regular"
-                    android:paddingBottom="@dimen/_15sdp"
-                    android:text="Total Price 1650"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp"
-                    app:layout_constraintStart_toStartOf="@+id/tvPlanMonthFirst"
-                    app:layout_constraintTop_toBottomOf="@+id/tvPlanMonthFirst" />
-
-                <ImageView
-                    android:id="@+id/ivNextArrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_18sdp"
-                    android:src="@drawable/ic_forward_arrow"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvPlanPriceFirst"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_12sdp"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="Rs 275"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_15ssp"
-                    app:layout_constraintEnd_toStartOf="@+id/ivNextArrow"
-                    app:layout_constraintTop_toTopOf="@+id/tvPlanMonthFirst" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_12sdp"
-                    android:fontFamily="@font/lato_regular"
-                    android:text="@string/monthly"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp"
-                    app:layout_constraintEnd_toStartOf="@+id/ivNextArrow"
-                    app:layout_constraintTop_toBottomOf="@+id/tvPlanPriceFirst" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:background="@drawable/line_purple"
@@ -251,7 +197,7 @@
                 android:textColor="@color/bg_choose_plan_purple"
                 android:textSize="@dimen/_12ssp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/clPlanFirst" />
+                app:layout_constraintTop_toBottomOf="@+id/rvEquityPlan" />
 
 
             <TextView
@@ -268,7 +214,7 @@
                 android:textColor="@color/bg_choose_plan_purple"
                 android:textSize="@dimen/_12ssp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/clPlanFirst" />
+                app:layout_constraintTop_toBottomOf="@+id/rvEquityPlan" />
 
             <ImageView
                android:visibility="gone"
