--- a/app/src/main/res/layout/fragment_equity_advisory.xml
+++ b/app/src/main/res/layout/fragment_equity_advisory.xml
@@ -184,13 +184,29 @@
                 tools:itemCount="2"
                 tools:listitem="@layout/row_equity_plan" />
 
+            <TextView
+                android:visibility="visible"
+                android:id="@+id/tvMsgPlan"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/choose_plan"
+                android:textColor="@color/bg_choose_plan_purple"
+                android:textSize="@dimen/_14ssp"
+                app:layout_constraintTop_toBottomOf="@+id/rvWhatYouWillGet" />
+
+
 
             <TextView
                 android:background="@drawable/line_purple"
                 android:id="@+id/tvFAQs"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_45sdp"
                 android:fontFamily="@font/lato_semibold"
                 android:padding="@dimen/_4sdp"
                 android:text="@string/faqs"
@@ -207,7 +223,7 @@
                 android:id="@+id/tvSetCallWithAdviser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_45sdp"
                 android:fontFamily="@font/lato_semibold"
                 android:padding="@dimen/_4sdp"
                 android:text="@string/set_call_with_adviser"
