--- a/app/src/main/res/layout/fragment_equity_advisory.xml
+++ b/app/src/main/res/layout/fragment_equity_advisory.xml
@@ -129,7 +129,7 @@
                 enableNestedScrollView="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="@dimen/_15sdp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintTop_toBottomOf="@+id/tvTarrakkiAdvisory"
                 tools:itemCount="4"
@@ -185,20 +185,19 @@
                 tools:listitem="@layout/row_equity_plan" />
 
             <TextView
+                app:layout_constraintTop_toBottomOf="@+id/rvEquityPlan"
                 android:visibility="visible"
                 android:id="@+id/tvMsgPlan"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/choose_plan"
                 android:textColor="@color/bg_choose_plan_purple"
-                android:textSize="@dimen/_14ssp"
-                app:layout_constraintTop_toBottomOf="@+id/rvWhatYouWillGet" />
-
+                android:textSize="@dimen/_14ssp" />
 
 
             <TextView
@@ -206,14 +205,14 @@
                 android:id="@+id/tvFAQs"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_45sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:fontFamily="@font/lato_semibold"
                 android:padding="@dimen/_4sdp"
                 android:text="@string/faqs"
                 android:textColor="@color/bg_choose_plan_purple"
                 android:textSize="@dimen/_12ssp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvEquityPlan" />
+                app:layout_constraintTop_toBottomOf="@+id/tvMsgPlan" />
 
 
             <TextView
@@ -223,14 +222,14 @@
                 android:id="@+id/tvSetCallWithAdviser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_45sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:fontFamily="@font/lato_semibold"
                 android:padding="@dimen/_4sdp"
                 android:text="@string/set_call_with_adviser"
                 android:textColor="@color/bg_choose_plan_purple"
                 android:textSize="@dimen/_12ssp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvEquityPlan" />
+                app:layout_constraintTop_toBottomOf="@+id/tvMsgPlan" />
 
             <ImageView
                android:visibility="gone"
